# chess-puzzles-trainer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
assets/img/pieces/: ReadMe.txt
scripts/: build_linux.sh  build_windows.ps1  mine_blunders.py
src/chess_puzzles/: __init__.py  __main__.py  constants.py  json_config.py  move_utils.py  shortcuts.py  text_utils.py
src/chess_puzzles/app/: __init__.py  app_state.py  application.py  main_database_actions.py  main_layout.py  main_menu.py  main_user_notes.py  main_window.py  refutation_playback.py
src/chess_puzzles/board/: __init__.py  annotations.py  board_state.py  (+14 more)
tests/: test_attempt_recording.py  test_board_annotations.py  test_board_control.py  test_board_geometry.py  test_board_images.py  test_board_presentation.py  test_board_render_plan.py  test_board_renderer.py  test_course_library.py  test_engine_play_session.py  test_favorites_actions.py  test_grade.py  test_icon_recolor.py  test_json_config.py  test_learn_mode.py  test_lichess_import.py  test_mining.py  test_move_tree.py  test_pgn_comments.py  test_pgn_exporter.py  test_pgn_loader.py  test_platform_paths.py  test_prefix.py  test_puzzle_session.py  test_recent_courses.py  test_refutation_playback.py  test_repertoire.py  test_reports.py  test_review_queries.py  test_review_scheduler.py  test_review_view_favorites.py  test_settings_repository.py  test_shortcuts.py  test_skip.py  test_store_content.py  test_store_identity.py  test_store_userdata.py  test_svg_backend.py  test_uci_command.py  test_vision_analysis.py  (+5 more)
(+94 files in other folders)
