[project]
name = "chess-puzzles-trainer"
version = "1.0.1"
description = "Desktop chess puzzle trainer with engine analysis and play-vs-engine mode."
requires-python = ">=3.11"
dependencies = [
    "python-chess>=1.999",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
chess-puzzles-trainer = "chess_puzzles.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess_puzzles"]
include = ["assets/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
